--- a/.env.prod-db
+++ b/.env.prod-db
@@ -1,3 +1,3 @@
-POSTGRES_USER=hello_django
-POSTGRES_PASSWORD=hello_django
-POSTGRES_DB=hello_django_prod
+POSTGRES_USER=django
+POSTGRES_PASSWORD=django
+POSTGRES_DB=django_prod
