--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,6 +1,8 @@
 services:
   web:
-    build: ./app
+    build:
+      context: ./app
+      dockerfile: Dockerfile.dev
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
